test/files/neg/deprecate_package_object_extends.check
deprecate_package_object_extends.scala:3: warning: package object inheritance is deprecated (https://github.com/scala/scala-dev/issues/441);
drop the `extends` clause or use a regular object instead
package object foo extends C
                   ^
deprecate_package_object_extends.scala:5: warning: package object inheritance is deprecated (https://github.com/scala/scala-dev/issues/441);
drop the `extends` clause or use a regular object instead
package foo2 { object `package` extends C }
                                ^
error: No warnings can be incurred under -Werror.
2 warnings
1 error
